@@ -42,8 +42,8 @@ public:
     QWebElement &operator=(const QWebElement &);
     ~QWebElement();
 
-    inline bool operator==(const QWebElement& o) const { return m_element == o.m_element; }
-    inline bool operator!=(const QWebElement& o) const { return m_element != o.m_element; }
+    bool operator==(const QWebElement& o) const;
+    bool operator!=(const QWebElement& o) const;
 
     bool isNull() const;
 
